-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
None
-
Affects Version/s: None
-
Component/s: hotspot
The message uses the wrong format to describe the threshold percentage at below which old-has-grown triggers are ignored.
The current message:
Ignoring Trigger (OLD): Old has overgrown: usage (200M) is below threshold (50B) after 4 consecutive completed young GCs
should be replaced with something like:
Ignoring Trigger (OLD): Old has overgrown: usage (200M) is below threshold (2457M) after 4 consecutive completed young GCs
The current message:
Ignoring Trigger (OLD): Old has overgrown: usage (200M) is below threshold (50B) after 4 consecutive completed young GCs
should be replaced with something like:
Ignoring Trigger (OLD): Old has overgrown: usage (200M) is below threshold (2457M) after 4 consecutive completed young GCs