8318572: GenShen: Fix error in log message for ingored old-has-grown triggers

Reviewed-by: wkemper